--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "bcryptjs": "^3.0.3",
     "cloudinary": "^2.2.0",
     "framer-motion": "^12.23.24",
     "mapbox-gl": "^3.3.0",
@@ -24,6 +25,7 @@
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.0.1",
     "react-map-gl": "^7.1.7",
+    "react-photoswipe-gallery": "^4.0.0",
     "react-share": "^5.1.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
