--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-photoswipe-gallery": "^4.0.0",
     "react-share": "^5.1.0",
     "react-spinners": "^0.13.8",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
