--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-share": "^5.1.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "resend": "^6.6.0",
     "sanitize-html": "^2.17.0"
   },
   "devDependencies": {
