--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
     "resend": "^6.6.0",
-    "sanitize-html": "^2.17.0"
+    "sanitize-html": "^2.17.0",
+    "sharp": "^0.34.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
