--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "@types/react": "^18.2.45",
+    "@types/node": "^20.11.6"
   }
 }
