--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.4",
     "axios": "^1.6.8",
     "bcryptjs": "^3.0.3",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.2.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.3.0",
     "mongodb": "^6.5.0",
     "mongoose": "^8.3.1",
@@ -31,17 +35,18 @@
     "react-toastify": "^10.0.5",
     "resend": "^6.6.0",
     "sanitize-html": "^2.17.0",
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.11.6",
+    "@types/react": "^18.2.45",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.9.3",
-    "@types/react": "^18.2.45",
-    "@types/node": "^20.11.6"
+    "typescript": "^5.9.3"
   }
 }
