--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-share": "^5.1.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "resend": "^6.6.0",
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.5",
