--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "mapbox-gl": "^3.3.0",
     "mongodb": "^6.5.0",
@@ -28,16 +29,18 @@
     "react-dom": "^18",
     "react-geocode": "^1.0.0-alpha.1",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
     "react-photoswipe-gallery": "^4.0.0",
     "react-share": "^5.1.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
-    "socket.io": "^4.8.1",
-    "socket.io-client": "^4.8.1",
     "resend": "^6.6.0",
     "sanitize-html": "^2.17.0",
     "sharp": "^0.34.5",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
